--- a/less/about-us.less
+++ b/less/about-us.less
@@ -1,17 +1,11 @@
-@keyframes floatingText {
-    0% {left: 0%;}
-    50% {left: 2%;}
-    100% {left: 0%;}
-  }
-
 body {
     background-color:@heavy-dark;
-    height: 100%;
+    // height: 100%;
 }
 
 .header {
     .flex(row no-wrap,space-evenly);
-    height: 10%;
+    height: 15%;
     width: 100%;
         a{
         color: @dark-green;
@@ -19,13 +13,24 @@ body {
     }
 }
 
-.main {
-    .flex(row no-wrap, space-evenly);
 
-        height: 70%;
+
+.main {
+    .flex(row wrap, space-evenly);
+
+        height: 80%;
+
+    .top {width: 90%;
+        height: 20%;
+        padding: 20px 30px 0;
+        text-align: center;
+        p{ color: white;
+        }
+    }
+
     .card {
-        width: 33%;
-        height: 200px;
+        width: 20%;
+        height: 300px;
         border: solid 1px black;
         border-bottom: double;
         vertical-align: text-top;
@@ -42,14 +47,21 @@ body {
 
 
 @media @tablet {
+
+    .header {
+        height: 20%;
+    }
     .main {
         .flex(row wrap, space-evenly);
+        .top {
+            height: 30%;
+        }
         .card {
-            width: 50%;
+            width: 33%;
             height: 300px;
         }
         .me {
-           width: 100%;
+           width: 50%;
             height: 200px;
             margin: 0;
         }
@@ -57,11 +69,18 @@ body {
 }
 
 @media @mobile {
+
+    .header {
+        height: 30%;
+    }
     .main {
         .flex(column nowrap, space-evenly);
+        .top {
+            height: 50%;
+        }
         .card {
             width: 100%;
-            height: 200px;
+            height: 300px;
         }
     } 
 }
