--- a/less/about-us.less
+++ b/less/about-us.less
@@ -36,13 +36,17 @@ body {
         vertical-align: text-top;
         padding: 5px;
         }
+        img {
+            height: 200px;
+            width: 175px;
+        }
         a {
             text-decoration: none;
-            :hover {
-                text-shadow: 2px 0px 20px red;
+            color:green;
+            font-size: 2 rem;
             }
         }
-    }
+    
 
 
 
