--- a/less/variables.less
+++ b/less/variables.less
@@ -12,11 +12,11 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
-@dark-green: #61892F;
-@light-green: #86C232;
-@heavy-dark: #222629;
-@medium-dark: #474B4F;
-@light-dark: #6B6E70;
+@dark-green: #F0E3FF;
+@light-green: #F0E3FF;
+@heavy-dark: #3E206D;
+@medium-dark: #916DD5;
+@light-dark: #D89CF6;
 
 //Responsiveness
 @tablet: ~"(max-width: 1000px)";
